--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,8 @@
         "laravel/framework": "^7.0",
         "laravel/nova": "*",
         "laravel/tinker": "^2.0",
+        "maatwebsite/excel": "^3.1",
+        "maatwebsite/laravel-nova-excel": "^1.2",
         "reinink/advanced-eloquent": "^0.2.0",
         "spatie/laravel-medialibrary": "^8.3.0",
         "timothyasp/nova-color-field": "^1.0"
